fixed tet on mobile 3

--- a/css/styles.css
+++ b/css/styles.css
@@ -314,7 +314,7 @@
     left: 20px;
   }
   .masthead .ml12 {
-    font-size: .8rem;
+    font-size: .85rem;
     letter-spacing: .4rem;
   }
   .masthead h1 {
