--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -189,7 +189,7 @@
     }
 
     .ml12 {
-      font-size: .8rem;
+      font-size: .85rem;
       letter-spacing: .4rem;
     }
     h1 {
